--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "history": "^5.1.0",
     "react": "^17.0.2",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
